Web compatibility backporting.
Bug 1334554: Handle the return value of nsFilterInstance::PaintFilteredFrame, needed for 1336480.

Bug 1336480 Part 1: Apply suface limitation in nsFilterInstance::ComputeNeededBoxes.

There is no need to limit output space bounds in
nsFilterInstance::OutputFilterSpaceBounds(), it's just far too early.

Bug 1336480 Part 2: Test case.

Bug 1526609: When interrupting the reflow of abspos kids, still account for the old overflow areas.

Otherwise, if we're scrolled, the scroll frame will think that our scroll range was reduced, which will in turn clamp the scroll position, which is not good.

--- a/layout/generic/test/mochitest.ini
+++ b/layout/generic/test/mochitest.ini
@@ -126,6 +126,7 @@ skip-if = toolkit == 'android'
 [test_plugin_position.xhtml]
 skip-if = e10s
 [test_scroll_behavior.html]
+[test_scrollframe_abspos_interrupt.html]
 [test_selection_expanding.html]
 support-files = selection_expanding_xbl.xml
 [test_selection_preventDefault.html]
